--- a/Calendar/Calendar.vcxproj
+++ b/Calendar/Calendar.vcxproj
@@ -140,14 +140,18 @@
   <ItemGroup>
     <ClCompile Include="Appointment.cpp" />
     <ClCompile Include="Calendar.cpp" />
+    <ClCompile Include="Date.cpp" />
     <ClCompile Include="Day.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Parser.cpp" />
     <ClCompile Include="TimeInterval.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Appointment.h" />
     <ClInclude Include="Calendar.h" />
+    <ClInclude Include="Date.h" />
     <ClInclude Include="Day.h" />
+    <ClInclude Include="Parser.h" />
     <ClInclude Include="TimeInterval.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
